--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,7 @@
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-
+.active {
+   color:#000000
+  }
 /*Login Component Styles*/
 #header_cf15_0{padding-left:50px; margin-top:50px;}
 #h4_cf15_0{font-weight:bold;}
